Implement navigation interactions for hydrometer correction wizard prototype with React.
Includes parameterization of React components, dynamic one-page updates of hydrometer correction wizard and event handling for navigation event.s

--- a/prototype/static/assets/css/prototype.css
+++ b/prototype/static/assets/css/prototype.css
@@ -57,6 +57,7 @@ a, a:hover, a:active {
     background-repeat: no-repeat;
     background-position: center left;
     background-size: auto 1.0em;
+    cursor: pointer;
 }
 .nav-item {
     border: 0.05em solid white;
