--- a/style/main.css
+++ b/style/main.css
@@ -1,3 +1,4 @@
+@import "../node_modules/bootstrap/dist/css/bootstrap.min.css";
 body {
     background-color: #FFFFDD;
 }
@@ -5,6 +6,7 @@ body {
     margin: 1px 10px;
     padding: 4px 0;
     background-color: gold;
+    cursor: pointer;
 }
 .enter-btn:hover {
     background-color: #ffed6f;
@@ -43,20 +45,15 @@ a, a:hover, a:active {
     padding: 0.4em 0.2em;
     background-color: darkslategray;
     color: white;
-    cursor: pointer;
 }
 .nav-back {
-    border-left: 0.05em solid white;
-    border-right: 0.05em solid white;
-    border-top: 0.05em solid slategray;
-    border-bottom: 0.05em solid slategray;
+    border: 0.05em solid slategray;
+    border-right-color: white;
+    border-left-color: white;
     border-collapse: collapse;
     margin-top: 3em;
     padding: 0.4em 0.2em 0.35em 1.0em;
-    background-color: gold;
-    background-image: url("../images/icon-arrow-left-b-128.png");
-    background-repeat: no-repeat;
-    background-position: center left;
+    background: gold url("../images/icon-arrow-left-b-128.png") no-repeat center left;
     background-size: auto 1.0em;
     cursor: pointer;
 }
@@ -65,11 +62,9 @@ a, a:hover, a:active {
     border-collapse: collapse;
     margin: 0;
     padding: 0.6em 0.2em;
-    background-color: gold;
-    background-image: url("../images/icon-arrow-right-b-128.png");
-    background-repeat: no-repeat;
-    background-position: center right;
+    background: gold url("../images/icon-arrow-right-b-128.png") no-repeat center right;
     background-size: auto 1.5em;
+    cursor: pointer;
 }
 .nav-item:hover, .nav-back:hover {
     background-color: #ffed6f;
@@ -104,12 +99,11 @@ a, a:hover, a:active {
     height: 1.5em;
 }
 .wizard-progress-not-done {
-    background-image: url("../images/wizard-next.png");
-    background-repeat: no-repeat;
-    background-position: center right;
+    background: gold url("../images/wizard-next.png") no-repeat center right;
     background-size: auto 1.5em;
 }
 .wizard-progress-done {
+    background-color: gold;
     border-right: 0.05em solid white;
 }
 .page-footer {
@@ -122,4 +116,7 @@ a, a:hover, a:active {
 }
 .margin-top-1 {
     margin-top: 1em;
+}
+.link {
+    cursor: pointer;
 }
