--- a/style/main.css
+++ b/style/main.css
@@ -1,6 +1,12 @@
 @import "../node_modules/bootstrap/dist/css/bootstrap.min.css";
+@import "settings.css";
 body {
     background-color: #FFFFDD;
+}
+.wrapper {
+    margin: 0;
+    padding: 0;
+    border-style: none;
 }
 .enter-btn {
     margin: 1px 10px;
