Make temperature units configurable.
This change does not yet perform any conversion of values already entered.

--- a/style/settings.css
+++ b/style/settings.css
@@ -12,7 +12,7 @@
     background-color: rgba(0, 0, 0, 0.4);
 }
 
-.prefs-content {
+.prefs {
     background-color: #fefefe;
     margin: 15% auto;
     padding: 20px;
