Wholesale re-write.
Without making visual changes... adopted Airbnb style, re-wrote the majority of the app, pulled in logic from ciderlib to implement Hydrometer correction, migrated from mocha/karma to jest, and audited dependencies to tighten things up.

--- a/style/main.css
+++ b/style/main.css
@@ -95,6 +95,7 @@ a, a:hover, a:active {
     background: gold url("../images/icon-arrow-right-b-128.png") no-repeat center right;
     background-size: auto 1.5em;
     cursor: pointer;
+    width: 100%;
 }
 .nav-item:hover, .nav-back:hover {
     background-color: #ffed6f;
